edit menu di index.html

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                 <span class="nav-link-text">Data Satuan</span>
               </a>
             </li>
+            <li class="nav-item" >
+                <a class="nav-link" href="supplier.html">
+                  <i class="fas fa-truck-loading text-danger"></i>
+                  <span class="nav-link-text">Data Supplier</span>
+                </a>
+              </li>
           </ul>
           <!-- Divider -->
           <hr class="mt-0 mb-3">
