--- a/report-product.html
+++ b/report-product.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
-  <title>Laporan | Inventori Management System</title>
+  <title>Data Laporan | Inventori Management System</title>
   <!-- Favicon -->
   <link rel="icon" href="assets/img/brand/favicon.png" type="image/png">
   <!-- Fonts -->
@@ -333,16 +333,13 @@
         <div class="header-body">
           <div class="row align-items-center py-4">
             <div class="col-lg-6 col-7">
-              <h6 class="h2 text-white d-inline-block mb-0">Data Barang</h6>
+              <h6 class="h2 text-white d-inline-block mb-0">Data Laporan Barang</h6>
               <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                 <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                   <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                  <li class="breadcrumb-item"><a href="#">Data Barang</a></li>
+                  <li class="breadcrumb-item"><a href="#">Data Laporan Barang</a></li>
                 </ol>
               </nav>
-            </div>
-            <div class="col-lg-6 col-5 text-right">
-              <button type="button" id="btn-box" class="btn btn-outline-light text-white">Tambah Data</button>
             </div>
           </div>
         </div>
@@ -373,7 +370,7 @@
           <div class="card">
             <!-- Card header -->
             <div class="card-header text-center text-uppercase border-0 bg-secondary mb-3">
-              <h3 class="mb-0">Data Barang</h3>
+              <h3 class="mb-0">Data Laporan Barang</h3>
             </div>
             <!-- Light table -->
             <div class="table-responsive pb-3">
@@ -386,99 +383,51 @@
                       <th class="text-sm" style="width: 100px !important;">Tanggal Buat</th>
                       <th class="text-sm">Kategori</th>
                       <th class="text-sm">Satuan</th>
-                      <th class="text-sm text-center" style="width: 100px !important;">Aksi</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td class="text-center">1</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
                         <td>Franmework</td>
-                        <td class="text-center py-1">
-                          <div class="btn-group">
-                            <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
-                            <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
-                          </div>
-                        </td>
                     </tr>
                     <tr>
                         <td class="text-center">2</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
                         <td>Franmework</td>
-                        <td class="text-center py-1">
-                          <div class="btn-group">
-                            <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
-                            <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
-                          </div>
-                        </td>
                     </tr>
                     <tr>
                         <td class="text-center">3</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
                         <td>Franmework</td>
-                        <td class="text-center py-1">
-                          <div class="btn-group">
-                            <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
-                            <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
-                          </div>
-                        </td>
                     </tr>
                     <tr>
                         <td class="text-center">4</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
                         <td>Franmework</td>
-                        <td class="text-center py-1">
-                          <div class="btn-group">
-                            <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
-                            <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
-                          </div>
                         </td>
                     </tr>
                     <tr>
                         <td class="text-center">5</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
                         <td>Franmework</td>
-                        <td class="text-center py-1">
-                          <div class="btn-group">
-                            <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
-                            <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
-                          </div>
-                        </td>
                     </tr>
                     <tr>
                         <td class="text-center">6</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
                         <td>Franmework</td>
-                        <td class="text-center py-1">
-                          <div class="btn-group">
-                            <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
-                            <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
-                          </div>
-                        </td>
                     </tr>
                 </tbody>
             </table>
