--- a/report-product.html
+++ b/report-product.html
@@ -100,7 +100,7 @@
           <!-- Divider -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="report.html">
+              <a class="nav-link" href="report-product.html">
                 <i class="fas fa-newspaper text-info"></i>
                 <span class="nav-link-text">Data Laporan</span>
               </a>
