--- a/supplier.html
+++ b/supplier.html
@@ -125,180 +125,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Navbar links -->
           <h1 class="text-uppercase text-brand text-white" style="font-family: PT Mono;">Inventory-APP</h1>
-          <ul class="navbar-nav align-items-center  ml-md-auto ">
-            <li class="nav-item d-xl-none">
-              <!-- Sidenav toggler -->
-              <div class="pr-3 sidenav-toggler sidenav-toggler-dark" data-action="sidenav-pin" data-target="#sidenav-main">
-                <div class="sidenav-toggler-inner">
-                  <i class="sidenav-toggler-line"></i>
-                  <i class="sidenav-toggler-line"></i>
-                  <i class="sidenav-toggler-line"></i>
-                </div>
-              </div>
-            </li>
-            <li class="nav-item d-sm-none">
-              <a class="nav-link" href="#" data-action="search-show" data-target="#navbar-search-main">
-                <i class="ni ni-zoom-split-in"></i>
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="ni ni-bell-55"></i>
-              </a>
-              <div class="dropdown-menu dropdown-menu-xl  dropdown-menu-right  py-0 overflow-hidden">
-                <!-- Dropdown header -->
-                <div class="px-3 py-3">
-                  <h6 class="text-sm text-muted m-0">You have <strong class="text-primary">13</strong> notifications.</h6>
-                </div>
-                <!-- List group -->
-                <div class="list-group list-group-flush">
-                  <a href="#!" class="list-group-item list-group-item-action">
-                    <div class="row align-items-center">
-                      <div class="col-auto">
-                        <!-- Avatar -->
-                        <img alt="Image placeholder" src="assets/img/theme/team-1.jpg" class="avatar rounded-circle">
-                      </div>
-                      <div class="col ml--2">
-                        <div class="d-flex justify-content-between align-items-center">
-                          <div>
-                            <h4 class="mb-0 text-sm">John Snow</h4>
-                          </div>
-                          <div class="text-right text-muted">
-                            <small>2 hrs ago</small>
-                          </div>
-                        </div>
-                        <p class="text-sm mb-0">Let's meet at Starbucks at 11:30. Wdyt?</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="#!" class="list-group-item list-group-item-action">
-                    <div class="row align-items-center">
-                      <div class="col-auto">
-                        <!-- Avatar -->
-                        <img alt="Image placeholder" src="assets/img/theme/team-2.jpg" class="avatar rounded-circle">
-                      </div>
-                      <div class="col ml--2">
-                        <div class="d-flex justify-content-between align-items-center">
-                          <div>
-                            <h4 class="mb-0 text-sm">John Snow</h4>
-                          </div>
-                          <div class="text-right text-muted">
-                            <small>3 hrs ago</small>
-                          </div>
-                        </div>
-                        <p class="text-sm mb-0">A new issue has been reported for Argon.</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="#!" class="list-group-item list-group-item-action">
-                    <div class="row align-items-center">
-                      <div class="col-auto">
-                        <!-- Avatar -->
-                        <img alt="Image placeholder" src="assets/img/theme/team-3.jpg" class="avatar rounded-circle">
-                      </div>
-                      <div class="col ml--2">
-                        <div class="d-flex justify-content-between align-items-center">
-                          <div>
-                            <h4 class="mb-0 text-sm">John Snow</h4>
-                          </div>
-                          <div class="text-right text-muted">
-                            <small>5 hrs ago</small>
-                          </div>
-                        </div>
-                        <p class="text-sm mb-0">Your posts have been liked a lot.</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="#!" class="list-group-item list-group-item-action">
-                    <div class="row align-items-center">
-                      <div class="col-auto">
-                        <!-- Avatar -->
-                        <img alt="Image placeholder" src="assets/img/theme/team-4.jpg" class="avatar rounded-circle">
-                      </div>
-                      <div class="col ml--2">
-                        <div class="d-flex justify-content-between align-items-center">
-                          <div>
-                            <h4 class="mb-0 text-sm">John Snow</h4>
-                          </div>
-                          <div class="text-right text-muted">
-                            <small>2 hrs ago</small>
-                          </div>
-                        </div>
-                        <p class="text-sm mb-0">Let's meet at Starbucks at 11:30. Wdyt?</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="#!" class="list-group-item list-group-item-action">
-                    <div class="row align-items-center">
-                      <div class="col-auto">
-                        <!-- Avatar -->
-                        <img alt="Image placeholder" src="assets/img/theme/team-5.jpg" class="avatar rounded-circle">
-                      </div>
-                      <div class="col ml--2">
-                        <div class="d-flex justify-content-between align-items-center">
-                          <div>
-                            <h4 class="mb-0 text-sm">John Snow</h4>
-                          </div>
-                          <div class="text-right text-muted">
-                            <small>3 hrs ago</small>
-                          </div>
-                        </div>
-                        <p class="text-sm mb-0">A new issue has been reported for Argon.</p>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <!-- View all -->
-                <a href="#!" class="dropdown-item text-center text-primary font-weight-bold py-3">View all</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="ni ni-ungroup"></i>
-              </a>
-              <div class="dropdown-menu dropdown-menu-lg dropdown-menu-dark bg-default  dropdown-menu-right ">
-                <div class="row shortcuts px-4">
-                  <a href="#!" class="col-4 shortcut-item">
-                    <span class="shortcut-media avatar rounded-circle bg-gradient-red">
-                      <i class="ni ni-calendar-grid-58"></i>
-                    </span>
-                    <small>Calendar</small>
-                  </a>
-                  <a href="#!" class="col-4 shortcut-item">
-                    <span class="shortcut-media avatar rounded-circle bg-gradient-orange">
-                      <i class="ni ni-email-83"></i>
-                    </span>
-                    <small>Email</small>
-                  </a>
-                  <a href="#!" class="col-4 shortcut-item">
-                    <span class="shortcut-media avatar rounded-circle bg-gradient-info">
-                      <i class="ni ni-credit-card"></i>
-                    </span>
-                    <small>Payments</small>
-                  </a>
-                  <a href="#!" class="col-4 shortcut-item">
-                    <span class="shortcut-media avatar rounded-circle bg-gradient-green">
-                      <i class="ni ni-books"></i>
-                    </span>
-                    <small>Reports</small>
-                  </a>
-                  <a href="#!" class="col-4 shortcut-item">
-                    <span class="shortcut-media avatar rounded-circle bg-gradient-purple">
-                      <i class="ni ni-pin-3"></i>
-                    </span>
-                    <small>Maps</small>
-                  </a>
-                  <a href="#!" class="col-4 shortcut-item">
-                    <span class="shortcut-media avatar rounded-circle bg-gradient-yellow">
-                      <i class="ni ni-basket"></i>
-                    </span>
-                    <small>Shop</small>
-                  </a>
-                </div>
-              </div>
-            </li>
-          </ul>
-          <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
+          <ul class="navbar-nav align-items-center  ml-auto">
             <li class="nav-item dropdown">
               <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="media align-items-center">
@@ -311,24 +138,9 @@
                 </div>
               </a>
               <div class="dropdown-menu  dropdown-menu-right ">
-                <div class="dropdown-header noti-title">
-                  <h6 class="text-overflow m-0">Welcome!</h6>
-                </div>
                 <a href="#!" class="dropdown-item">
                   <i class="ni ni-single-02"></i>
                   <span>My profile</span>
-                </a>
-                <a href="#!" class="dropdown-item">
-                  <i class="ni ni-settings-gear-65"></i>
-                  <span>Settings</span>
-                </a>
-                <a href="#!" class="dropdown-item">
-                  <i class="ni ni-calendar-grid-58"></i>
-                  <span>Activity</span>
-                </a>
-                <a href="#!" class="dropdown-item">
-                  <i class="ni ni-support-16"></i>
-                  <span>Support</span>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="#!" class="dropdown-item">
@@ -510,60 +322,30 @@
 
   <div class="box-add px-4 py-5">
     <div class="box-header d-flex justify-content-between align-items-center">
-      <h1 class="h2 d-inline mb-0">Tambah Data Barang</h1>
+      <h1 class="h2 d-inline mb-0">Tambah Data Supplier</h1>
       <button class="min-box" id="min-box">X</button>
     </div>
     <hr class="mt-2 mb-4">
 
     <form action="coba.html" method="post" class="form-validation">
       <div class="form-group mb-1">
-        <label class="font-weight-600" for="name">Nama Barang</label>
+        <label class="font-weight-600" for="name">Nama Supplier</label>
         <input type="text" name="name" data-validation="required" class="form-control border-999" tabindex="1" id="name">
         <small class="text-danger v-hidden">Error</small>
       </div>
 
       <div class="form-group mb-1">
-        <label class="font-weight-600" for="kategori">Kategori</label>
-        <select name="kategori" data-validation="required" class="form-control js-example-basic-single pr-3" id="kategori" tabindex="2">
-          <option disabled selected value> -- Pilih Kategori -- </option>
-          <option value="kategori">Kategori 1</option>
-          <option value="kategori">Kategori 2</option>
-          <option value="kategori">Kategori 3</option>
-          <option value="kategori">Kategori 4</option>
-          <option value="kategori">Kategori 5</option>
-        </select>
-        <div class="d-flex mt-1 justify-content-between">
-          <small class="text-danger v-hidden">Error</small>
-          <a href="category.html" class="text-primary">+ Tambah Kategori</a>
-        </div>
-      </div>
-
-      <div class="form-group mb-1">
-        <label class="font-weight-600" for="exampleFormControlSelect1">Satuan</label>
-        <select name="satuan" data-validation="required"  class="form-control js-example-basic-single pr-3" id="exampleFormControlSelect1" tabindex="2">
-          <option disabled selected value> -- Pilih Satuan -- </option>
-          <option value="satuan">Satuan 1</option>
-          <option value="satuan">Satuan 2</option>
-          <option value="satuan">Satuan 3</option>
-          <option value="satuan">Satuan 4</option>
-          <option value="satuan">Satuan 5</option>
-        </select>
-        <div class="d-flex mt-1 justify-content-between">
-          <small class="text-danger v-hidden">Error</small>
-          <a href="unit.html" class="text-primary">+ Tambah Satuan</a>
-        </div>
-      </div>
-
-      <div style="clear: both;"></div>
-
-      <div class="form-group ">
-        <label class="font-weight-600" for="exampleFormControlSelect1">Foto</label>
-        <div class="custom-file">
-          <input type="file" data-validation="file" name="file" class="custom-file-input" id="customFile">
-          <label class="custom-file-label" for="customFile" tabindex="4">Choose file</label>
-        </div>
+        <label class="font-weight-600" for="telephon">Telepon</label>
+        <input type="number" name="telephon" data-validation="required" class="form-control border-999" tabindex="1" id="telephon">
         <small class="text-danger v-hidden">Error</small>
       </div>
+
+      <div class="form-group">
+        <label for="address">Alamat</label>
+        <textarea class="form-control" data-validation="required" name="address" id="address" rows="3"></textarea>
+        <small class="text-danger v-hidden">Error</small>
+      </div>
+      
       <div class="form-group">
         <div class="box-footer  mt-5 d-flex px-5">
           <button type="submit" class="btn btn-validation btn-primary d-block w-50" tabindex="5">Simpan</button>
