add extention file validation main.js

--- a/out-product.html
+++ b/out-product.html
@@ -355,7 +355,7 @@
 
       <div class="form-group mb-1">
         <label class="font-weight-600" for="description">Ketarangan</label>
-        <input type="text" name="description" data-validation="required" class="form-control border-999" tabindex="1" id="description">
+        <input type="text" name="description" data-focus="false" data-validation="required" class="form-control border-999" tabindex="1" id="description">
         <small class="text-danger v-hidden">Error</small>
       </div>
 
