--- a/users.html
+++ b/users.html
@@ -392,10 +392,13 @@
       <div class="form-group ">
         <label class="font-weight-600" for="image">Foto</label>
         <div class="custom-file">
-          <input type="file" data-validation="file" name="image" class="custom-file-input" id="image">
+          <input type="file" data-validation="file" data-valid="jpg-jpeg-png" name="image" class="custom-file-input" id="image">
           <label class="custom-file-label" for="customFile" tabindex="4">Choose file</label>
         </div>
-        <small class="text-danger v-hidden">Error</small>
+        <div class="d-flex mt-1 justify-content-between">
+          <small class="text-danger v-hidden">Error</small>
+          <small class="text-dark">Format Gambar : JPG / PNG / JPEG</small>
+        </div>
       </div>
       <div class="form-group">
         <div class="box-footer d-flex px-5">
