--- a/product.html
+++ b/product.html
@@ -25,6 +25,37 @@
 </head>
 
 <body class="position-relative">
+  <!-- Modal Confirm -->
+  <div class="modal-confirm " id="confirm-delete">
+		<div class="modal-confirm-body shadow rounded pb-4 position-relative">
+      <div class="confirm-header mb-4 bg-primary py-3 w-100 position-relative rounded-top">
+        <h1 class="text-white h2">Konfirmasi <span class="title-modal-confirm">hapus</span>!</h1>
+      </div>
+			<p class="message-modal-confirm text-lg mb-5">Tetap lakukan hapus data ini?</p>
+      <button class="btn-confirm-close btn btn-dark" data-close="confirm-delete">Batal</button>
+      <form class="d-inline-block">
+        <input type="hidden" name="id" class="id-data form-control" value=""> <!-- Otomatis get id -->
+        <button type="submit" class=" btn btn-danger">Hapus</button>
+      </form>
+		</div>
+  </div>
+
+  <div class="modal-confirm " id="confirm-logout">
+		<div class="modal-confirm-body shadow rounded pb-4 position-relative">
+      <div class="confirm-header mb-4 bg-primary py-3 w-100 position-relative rounded-top">
+        <h1 class="text-white h2">Konfirmasi <span class="title-modal-confirm">logout</span>!</h1>
+      </div>
+			<p class="message-modal-confirm text-lg mb-5">Anda yakin untuk logout?</p>
+      <button class="btn-confirm-close btn btn-dark" data-close="confirm-logout">Batal</button>
+      <form class="d-inline-block">
+        <input type="hidden" name="id" class="id-data form-control" value=""> <!-- Otomatis get id -->
+        <button type="submit" class=" btn btn-danger">Logout</button>
+      </form>
+		</div>
+  </div>
+
+  
+  
   <!-- Sidenav -->
   <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
     <div class="scrollbar-inner">
@@ -143,7 +174,8 @@
                   <span>My profile</span>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a href="#!" class="dropdown-item">
+                <!-- set id user in data-kode -->
+                <a href="#" data-content="confirm-logout" data-kode="idUser" class="btn-confirm-modal dropdown-item">
                   <i class="ni ni-user-run"></i>
                   <span>Logout</span>
                 </a>
@@ -169,7 +201,7 @@
               </nav>
             </div>
             <div class="col-lg-6 col-5 text-right">
-              <button type="button" id="btn-box" class="btn btn-outline-light text-white">Tambah Data</button>
+              <button type="button" id="btn-box" class="btn btn-outline-light text-white">Tambah Data</button> 
             </div>
           </div>
         </div>
@@ -190,7 +222,6 @@
                 <thead>
                     <tr class="table-primary text-dark font-weight-700">
                       <th class="text-sm" style="width: 30px !important;">No</th>
-                      <!-- <th class="text-sm">Foto</th> -->
                       <th class="text-sm">Nama</th>
                       <th class="text-sm" style="width: 100px !important;">Tanggal Buat</th>
                       <th class="text-sm">Kategori</th>
@@ -201,7 +232,6 @@
                 <tbody>
                     <tr>
                         <td class="text-center">1</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
@@ -210,13 +240,13 @@
                           <div class="btn-group">
                             <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
                     <tr>
+                      <!--  -->
                         <td class="text-center">2</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
@@ -225,13 +255,12 @@
                           <div class="btn-group">
                             <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id2" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
                     <tr>
                         <td class="text-center">3</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
@@ -240,13 +269,12 @@
                           <div class="btn-group">
                             <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id3" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
                     <tr>
                         <td class="text-center">4</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
@@ -255,13 +283,12 @@
                           <div class="btn-group">
                             <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id4" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
                     <tr>
                         <td class="text-center">5</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
@@ -270,13 +297,12 @@
                           <div class="btn-group">
                             <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id5" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
                     <tr>
                         <td class="text-center">6</td>
-                        <!-- <td><img src="assets/img/theme/angular.jpg" width="50" alt="Foto Barang"></td> -->
                         <td>Angular</td>
                         <td>12/11/2020</td>
                         <td>Javascript</td>
@@ -285,7 +311,7 @@
                           <div class="btn-group">
                             <button class="bdg btn-outline-primary hover-warning"><i class="fas fa-info"></i></button>
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0 border-left-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id6" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -315,7 +341,7 @@
     </div>
   </div>
 
-  <div class="box-add px-4 py-5 show-box">
+  <div class="box-add px-4 py-5">
     <div class="box-header d-flex justify-content-between align-items-center">
       <h1 class="h2 d-inline mb-0">Tambah Data Barang</h1>
       <button class="min-box" id="min-box">X</button>
@@ -373,9 +399,6 @@
           <small class="text-danger v-hidden">Error</small>
         </div>
       </div>
-
-      <div style="clear: both;"></div>
-
       <div class="form-group ">
         <label class="font-weight-600" for="foto">Foto</label>
         <div class="custom-file">
@@ -394,6 +417,13 @@
         </div>
     </form>
   </div>
+
+
+  
+  
+  
+
+  <!-- Button trigger modal -->
 
   <!-- Argon Scripts -->
   <!-- Core -->
